--- a/ModelOclock/res/values/strings.xml
+++ b/ModelOclock/res/values/strings.xml
@@ -3,6 +3,13 @@
 
     <string name="app_name">ModelOclock</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+   
+    <string name="monday">星期一</string>
+    <string name="tuesday">星期二</string>
+    <string name="wednesday">星期三</string>
+    <string name="thursday">星期四</string>
+    <string name="friday">星期五</string>
+    <string name="saturday">星期六</string>
+    <string name="sunday">星期日</string>
 
 </resources>
